--- a/.github/workflows/sort_and_check_rtx_conf.yml
+++ b/.github/workflows/sort_and_check_rtx_conf.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Run python unit tests
         run: |
-          python.exe -m unittest scripts/test_sort_rtx_conf.py
+          python -m unittest scripts/test_sort_rtx_conf.py
 
       - name: Sort lines in rtx.conf
         run: |
