--- a/rtx.conf
+++ b/rtx.conf
@@ -23,6 +23,7 @@ rtx.pathMaxBounces = 2
 rtx.pathMinBounces = 0
 rtx.playerModel.enableInPrimarySpace = True
 rtx.playerModelBodyTextures = 0x5C2BC42EFDB394F4, 0x5D701C84A4197E17, 0x63B3E94C4E4377D7, 0xCCEFA4550EF23488, 0xE43EAC570FE5B8A5
+rtx.playerModelBodyTextures = 0x5C2BC42EFDB394F4
 rtx.postfx.enable = False
 rtx.postfx.enableChromaticAberration = False
 rtx.postfx.enableMotionBlur = False
