--- a/.github/workflows/sort_and_check_rtx_conf.yml
+++ b/.github/workflows/sort_and_check_rtx_conf.yml
@@ -1,6 +1,6 @@
 name: Sort and Check Rtx Conf file
 
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
   sort-lines:
@@ -14,6 +14,11 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: "3.x"
+
+      - name: Run python unit tests
+        run: |
+          cd scripts
+          python -m unittest test_sort_rtx_conf.py
 
       - name: Sort lines in rtx.conf
         run: |
