Update script to also show diff on PR

--- a/.github/workflows/sort_and_check_rtx_conf.yml
+++ b/.github/workflows/sort_and_check_rtx_conf.yml
@@ -33,6 +33,13 @@ jobs:
           git add ./rtx.conf
           git diff --staged --exit-code || (git commit -m "Clean up rtx.conf" && git push)
 
+      - name: Sort lines in rtx.conf
+        id: changes_output
+        run: |
+          curl -o old_rtx.conf https://raw.githubusercontent.com/CattoSalad/VTMB-RTX-Remix/main/rtx.conf 
+          output=$(python scripts/generate_diff.py)
+          echo "::set-output name=output::$output"
+
       - name: Post comment
         if: github.event_name == 'pull_request'
         uses: peter-evans/create-or-update-comment@v1
@@ -40,3 +47,6 @@ jobs:
           issue-number: ${{ github.event.pull_request.number }}
           body: |
             ```${{ steps.results_output.outputs.output }}```
+
+            Changes:
+            ```${{ steps.changes_output.outputs.output }}```
