--- a/.github/workflows/sort_and_check_rtx_conf.yml
+++ b/.github/workflows/sort_and_check_rtx_conf.yml
@@ -36,6 +36,7 @@ jobs:
       - name: Generate diff
         id: changes_output
         run: |
+          curl -o old_rtx.conf https://raw.githubusercontent.com/CattoSalad/VTMB-RTX-Remix/main/rtx.conf
           {
             echo 'DIFF_OUTPUT<<EOF'
             python scripts/generate_diff.py
