Change GITHUB_ENV to GITHUB_OUTPUT

--- a/.github/workflows/sort_and_check_rtx_conf.yml
+++ b/.github/workflows/sort_and_check_rtx_conf.yml
@@ -41,7 +41,7 @@ jobs:
             echo 'DIFF_OUTPUT<<EOF'
             python scripts/generate_diff.py
             echo EOF
-          } >> "$GITHUB_ENV"
+          } >> "$GITHUB_OUTPUT"
 
       - name: Post comment
         if: github.event_name == 'pull_request'
