Updated formatting for bot command

--- a/.github/workflows/sort_and_check_rtx_conf.yml
+++ b/.github/workflows/sort_and_check_rtx_conf.yml
@@ -55,4 +55,4 @@ jobs:
           issue-number: ${{ github.event.pull_request.number }}
           body: |
             Changes:
-            ```${{ steps.changes_output.outputs.diff_output }}```
+            ${{ steps.changes_output.outputs.diff_output }}
