--- a/.github/workflows/publish_wiki.yml
+++ b/.github/workflows/publish_wiki.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [main]
     paths:
-      - .github/wiki/**
+      - wiki/**
       - .github/workflows/publish-wiki.yml
 concurrency:
   group: publish-wiki
