Update action to run on subsequent commits when a PR has already been opened

--- a/.github/workflows/sort_and_check_rtx_conf.yml
+++ b/.github/workflows/sort_and_check_rtx_conf.yml
@@ -2,6 +2,7 @@ name: Sort and Check Rtx Conf file
 
 on:
   pull_request:
+    types: [opened, synchronize, reopened]
     branches:
       - main
     paths:
