Updated github action

--- a/.github/workflows/sort_and_check_rtx_conf.yml
+++ b/.github/workflows/sort_and_check_rtx_conf.yml
@@ -2,11 +2,10 @@ name: Sort and Check Rtx Conf file
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened]
     branches:
       - main
     paths:
-      - ./rtx.conf
+      - '**.conf'
 
 jobs:
   sort-lines:
